# LanChi

./: .gitignore  README.md  main.py  pyproject.toml  save_project_specs.py
lanchi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
skills/agent_chat/: SKILL.md
skills/calculator/: SKILL.md
skills/context_summarizer/: SKILL.md
skills/devdocs/: SKILL.md  logic.py
skills/mind_mapper/: SKILL.md  logic.py
skills/research_assistant/: SKILL.md  logic.py
skills/system_monitor/: SKILL.md
skills/time_scheduler/: SKILL.md  config.yaml  logic.py
src/: LCNotification.py  bridge.py  context.py  history.py  main.py  proxy.py  skills.py
src/lanchi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/plugins/: agent_chat.py  calculator.py  context_summarizer.py  system_monitor.py
src/static/: index.html
